# aiwaf-rust

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  README_PYPI.md  REPO_GUIDE.md  pyproject.toml
.github/workflows/: publish.yml
crates/aiwaf_core/: Cargo.toml
crates/aiwaf_core/src/: lib.rs
crates/aiwaf_wasm/: Cargo.toml  README.md
crates/aiwaf_wasm/src/: lib.rs
crates/aiwaf_wasm/tests/: wasm_api.rs
scripts/: check_zip_trailing.py  inspect_zip.py  normalize_wheel.py  patch_wasm_pkg.py  wheel_crc_check.py
src/: lib.rs
tests/: test_isolation_forest_sklearn.py  test_python_api.py
workflows/: publish.yml
