[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "aiwaf-rust"
version = "0.1.3"
description = "Rust-powered WAF heuristics exposed to Python via PyO3"
readme = "README_PYPI.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "AIWAF maintainers" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "aiwaf_rust"
