[package]
name = "aiwaf-wasm"
version = "0.1.3"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aiwaf_core = { path = "../aiwaf_core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
aiwaf_core = { path = "../aiwaf_core" }
